# todo-mvc-mad-stack

./: .gitignore  Cargo.toml  README.md  bacon.toml  cargo-fix-and-test.bash
migrations/2025-04-11-122505_create_todolist/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  test_utils.rs
src/controllers/: database.rs  mod.rs
src/controllers/dao/: todo_list.rs
src/controllers/endpoints/: echo.rs  home.rs  mod.rs  todolist_create.rs
src/models/: mod.rs  todo_list.rs
src/models/forms/: mod.rs  todolist_create.rs
src/views/: base.rs  home.rs  mod.rs
