[package]
name = "todo-mash-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
maud = "0.25"
actix-web = "4.0"
# surrealdb = { version = "1.0", features = ["http", "kv-rocksdb"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
#sea-orm = "1.1.8"
#sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
diesel = { version = "2.2.0", features = [
    "r2d2",
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
# diesel-async = { version = "0.5.2", features = [
#     "sync-connection-wrapper",
#     "deadpool",
#     "pool",
#     "sqlite",
# ] }
r2d2 = "0.8.10"
