[package]
name = "todo-mad"
version = "0.1.0"
edition = "2024"

[dependencies]
maud = "0.25"
actix-web = "4.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.2.0", features = [
    "r2d2",
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.0"
dotenvy = "0.15"
r2d2 = "0.8.10"
